revert(css): Remove flex-wrap in Modal (was causing layout issues)

--- a/src/Bs/View/Modal/modal.css
+++ b/src/Bs/View/Modal/modal.css
@@ -68,7 +68,6 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
 }
 
 @media screen and (max-width: 768px) {
